--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 VITE_CURRENCY = '$'
-VITE_BACKEND_URL = "http://localhost:4002"
+# VITE_BACKEND_URL = "http://localhost:4002"
+VITE_BACKEND_URL = "https://quick-delivery-pearl.vercel.app
+"
