--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-VITE_CURRENCY = '$'
-# VITE_BACKEND_URL = "http://localhost:4002"
+VITE_CURRENCY = '₹'
+VITE_BACKEND_URL = "http://localhost:4002"
 
-VITE_BACKEND_URL = "https://quick-delivery-two.vercel.app/"
+# VITE_BACKEND_URL = ""
 
